# pyProject2singleFile

./: .gitignore  Makefile  dist_test_local.DockerFile  dist_test_pypi.DockerFile  main.py  pyproject.toml  setup.py
project2singleFile/: codecleaner.py  helpers.py  main.py  stdlib.py
pybundle/: codecleaner.py  function_details.py  helpers.py  main.py  stdlib.py
src/pybundle/: export.py  main.py
tests/: logger.py  test_full_bundle.py  test_toto.py
tests/single_file_import/: main.py  single_file_import.py
toto/: __init__.py  titi.py
toto/tutu/: __init__.py
